--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
 rand = "0.8.5"
 bfsp = { path = "./bfsp" }
 rkyv = { version = "0.7", features = ["validation"] }
+once_cell = "1.18.0"
+dashmap = "5.5.0"
 
 
 [workspace]
