--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2021"
 # serde_json = "1"
 # once_cell = "1"
 bfsp = { path = "../bfsp" }
+blake3 = "1"
+rkyv = "0.7.42"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1", features = ["full"] }
