--- a/bfsp/Cargo.toml
+++ b/bfsp/Cargo.toml
@@ -13,3 +13,4 @@ tokio = { version = "1", features = ["fs", "io-util"] }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
+faster-hex = "0.8"
