--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,12 +5,13 @@ edition = "2021"
 
 
 [dependencies]
-# iced = { version = "0.9", features = ["tokio", "debug"] }
-# serde = { version = "1.0", features = ["derive"] }
-# serde_json = "1"
-# once_cell = "1"
+anyhow = "1.0.72"
 bfsp = { path = "../bfsp" }
 blake3 = "1"
+chacha20poly1305 = "0.10.1"
+fern = "0.6.2"
+humantime = "2.1.0"
+log = "0.4.19"
 rkyv = "0.7.42"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
