--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,2 @@
-export DATABASE_URL="sqlite:data.db"
+export DATABASE_URL="sqlite:/home/billy/Projects/encrypted_file_server/cli/data.db"
 use flake;
