--- a/bfsp/Cargo.toml
+++ b/bfsp/Cargo.toml
@@ -11,6 +11,7 @@ blake3 = { version = "1", features = ["rayon"] }
 anyhow = { version = "1" }
 tokio = { version = "1", features = ["fs", "io-util"] }
 sqlx = { version = "0.7.1", default-features = false }
+uuid = { version = "1", features = ["v4"] }
 
 [dev-dependencies]
 tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
