--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --all --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --all --verbose
+    - name: Check formatting
+      run: cargo fmt --check -all
