--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -12,6 +12,8 @@ humantime = "2"
 log = "0.4"
 rkyv = "0.7"
 sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
+clap = { version = "4", features = ["derive"] }
+futures = "0.3.28"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1", features = ["full"] }
