--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,10 +15,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: rui314/setup-mold@v1
     - uses: actions/checkout@v3
     - name: Build
       run: cargo build --all --verbose
     - name: Run tests
       run: cargo test --all --verbose
     - name: Check formatting
-      run: cargo fmt --check -all
+      run: cargo fmt --check --all
