Store chunk data in sqlite DB on server
The server can now store persistent state!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,9 @@ sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
 rand = "0.8"
 bfsp = { path = "./bfsp" }
 rkyv = { version = "0.7", features = ["validation"] }
+async-trait = { version = "0.1" }
 once_cell = "1"
-dashmap = "5"
+futures = { version = "0.3", features = ["executor"] }
 
 
 [workspace]
