--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ rkyv = { version = "0.7", features = ["validation"] }
 async-trait = { version = "0.1" }
 once_cell = "1"
 futures = { version = "0.3", features = ["executor"] }
+macaroon = "0.3.0"
 
 
 [workspace]
