--- a/bfsp/Cargo.toml
+++ b/bfsp/Cargo.toml
@@ -14,6 +14,10 @@ sqlx = { version = "0.7", default-features = false }
 uuid = { version = "1", features = ["v4"] }
 chacha20poly1305 = { version = "0.10", features = ["std"] }
 zstd = "0.13.0"
+serde = "1"
+serde_derive = "1"
+regex = "1"
+macaroon = "0.3"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
