--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,13 +7,14 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 bfsp = { path = "../bfsp" }
-fern = "0.6"
 humantime = "2"
+fern = "0.6"
 log = "0.4"
 rkyv = "0.7"
 sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
 clap = { version = "4", features = ["derive"] }
-futures = "0.3.28"
+futures = "0.3"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tokio = { version = "1", features = ["full"] }
