Refactoring of bfsp

--- a/auth/Cargo.toml
+++ b/auth/Cargo.toml
@@ -15,4 +15,4 @@ macaroon = "0.3"
 fern = "0.6"
 log = "0.4"
 humantime = "2.1.0"
-bfsp = { path = "../bfsp" }
+bfsp = { path = "../bfsp", default-features = false, features = ["auth"] }
