Exclude cli and auth from workspace, flake.nix
Auth isn't really a part of encrypted_file_server, it's a separate
component so it shouldn't be included in the workspace.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,11 @@ once_cell = "1"
 futures = { version = "0.3", features = ["executor"] }
 macaroon = "0.3"
 
-
 [workspace]
 members = [
-  "cli",
   "bfsp",
+]
+exclude = [
+  "cli",
   "auth",
 ]
