Simplify the file transfer protocol
Instead of sending multiple messages to perform a single action, I think
it's better to just send all the data at once. This could be bad, since
it means we don't stream chunk data, but that's something to figure out
another day ;)

--- a/bfsp/Cargo.toml
+++ b/bfsp/Cargo.toml
@@ -12,7 +12,7 @@ anyhow = { version = "1" }
 tokio = { version = "1", features = ["fs", "io-util"] }
 sqlx = { version = "0.7", default-features = false, features = ["sqlite"] }
 uuid = { version = "1", features = ["v4"] }
-chacha20poly1305 = { version = "0.10", features = ["std"] }
+chacha20poly1305 = { version = "0.10", features = ["std"], optional = true }
 zstd = "0.13"
 
 serde = { version = "1", optional = true }
@@ -25,11 +25,15 @@ tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread
 sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
 
 [features]
-default = ["auth", "file"]
-file = []
+default = ["auth", "file", "cli"]
+file = [
+     "chacha20poly1305",
+     "macaroon"
+]
 auth = [
      "macaroon",
      "serde",
      "serde_derive",
      "regex"
 ]
+cli = ["file"]
