--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -14,12 +14,8 @@ rkyv = "0.7"
 sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
 clap = { version = "4", features = ["derive"] }
 futures = "0.3"
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
-
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+reqwest = { version = "0.11", default-features = false, features = [
+    "json",
+    "rustls-tls",
+] }
 tokio = { version = "1", features = ["full"] }
-directories-next = "2"
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-web-sys = { version = "0.3", features = ["Window", "Storage"] }
-wasm-timer = "0.2"
