--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,28 +1,3 @@
-[package]
-name = "encrypted_file_server"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-anyhow = { version = "1" }
-tokio = { version = "1", features = ["net", "fs", "macros", "io-util", "rt-multi-thread"] }
-log = { version = "0.4" }
-fern = { version = "0.6", features = ["colored"] }
-humantime = "2"
-sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
-rand = "0.8"
-bfsp = { path = "./bfsp" }
-rkyv = { version = "0.7", features = ["validation"] }
-async-trait = { version = "0.1" }
-once_cell = "1"
-futures = { version = "0.3", features = ["executor"] }
-macaroon = "0.3"
-
 [workspace]
-members = [
-  "bfsp",
-  "cli",
-]
-exclude = [
-  "auth",
-]
+resolver = "2"
+members = ["bfsp", "cli", "auth", "fs"]
