file metadata apis + user_id instead of email

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,13 @@ fern = { version = "0.6", features = ["colored"] }
 humantime = "2"
 sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
 rand = "0.8"
-bfsp = { git = "https://github.com/Billy-s-E2EE-File-Server/bfsp" }
+bfsp = { git = "https://github.com/Billy-s-E2EE-File-Server/bfsp.git" }
 #bfsp = { path = "../bfsp" }
 async-trait = { version = "0.1" }
 once_cell = "1"
 futures = { version = "0.3", features = ["executor"] }
-macaroon = "0.3"
 thiserror = "1"
+biscuit-auth = { version = "4" }
+
+serde = { version = "1" }
+serde_json = { version = "1" }
