--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,8 +1,8 @@
-[target.x86_64-unknown-linux-gnu]
-rustflags = ["-Clink-arg=-fuse-ld=mold"]
+#[target.x86_64-unknown-linux-gnu]
+#rustflags = ["-Clink-arg=-fuse-ld=mold"]
 
-[target.aarch64-unknown-linux-gnu]
-rustflags = ["-Clink-arg=-fuse-ld=mold"]
+#[target.aarch64-unknown-linux-gnu]
+#rustflags = ["-Clink-arg=-fuse-ld=mold"]
 
 [target.x86_64-apple-darwin]
 rustflags = ["-Clink-arg=-fuse-ld=zld"]
