--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ tokio = { version = "1", features = [
 log = { version = "0.4" }
 fern = { version = "0.6", features = ["colored"] }
 humantime = "2"
-sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
 rand = "0.8"
+#bfsp = { path = "./bfsp" }
 bfsp = { git = "https://github.com/Billy-s-E2EE-File-Server/bfsp.git" }
-#bfsp = { path = "../bfsp" }
 async-trait = { version = "0.1" }
 once_cell = "1"
 futures = { version = "0.3", features = ["executor"] }
