--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "file_server"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+lto = "fat"
+debug = true
+
 [dependencies]
 anyhow = { version = "1" }
 tokio = { version = "1", features = [
@@ -20,7 +24,6 @@ wtransport = { version = "0.1" }
 #bfsp = { path = "./bfsp" }
 bfsp = { git = "https://github.com/Billy-s-E2EE-File-Server/bfsp.git" }
 async-trait = { version = "0.1" }
-once_cell = "1"
 futures = { version = "0.3", features = ["executor"] }
 thiserror = "1"
 biscuit-auth = { version = "4" }
