--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ humantime = "2"
 sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
 rand = "0.8"
 wtransport = { version = "0.1" }
-#bfsp = { path = "./bfsp" }
+#bfsp = { path = "../bfsp" }
 bfsp = { git = "https://github.com/Billy-s-E2EE-File-Server/bfsp.git" }
 async-trait = { version = "0.1" }
 futures = { version = "0.3", features = ["executor"] }
