--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,6 @@ tokio = { version = "1", features = [
   "io-util",
   "rt-multi-thread",
 ] }
-log = { version = "0.4" }
-fern = { version = "0.6", features = ["colored"] }
 humantime = "2"
 sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
 rand = "0.8"
@@ -24,9 +22,18 @@ thiserror = "1"
 biscuit-auth = { version = "4" }
 rust-s3 = "0.33"
 
+# tracing
+tracing = { version = "0.1" }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+opentelemetry-otlp = { version = "0.15.0", features = ["http-proto", "reqwest", "reqwest-client", "reqwest-rustls", "trace", "tokio"] }
+opentelemetry = "0.22"
+reqwest = "0.11"
+opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace"] }
+tracing-opentelemetry = "0.23"
+
 # TLS cert stuff
 instant-acme = "0.4"
-rcgen = "0.12.1"
+rcgen = "0.12"
 warp = "0.3"
 serde_json = "1"
-bytes = "1.6.0"
+bytes = "1.6"
