--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ bfsp = { git = "https://github.com/Billy-s-E2EE-File-Server/bfsp.git" }
 futures = { version = "0.3", features = ["executor"] }
 thiserror = "1"
 biscuit-auth = { version = "4" }
-rust-s3 = "0.33"
+rust-s3 = { version = "0.33", optional = true }
 
 # tracing
 tracing = { version = "0.1" }
@@ -37,3 +37,6 @@ rcgen = "0.12"
 warp = "0.3"
 serde_json = "1"
 bytes = "1.6"
+
+[features]
+s3 = ["rust-s3"]
