--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,8 @@ tracing-opentelemetry = "0.23"
 instant-acme = "0.4"
 rcgen = "0.12"
 warp = "0.3"
-serde_json = "1"
+serde = "1"
+serde_json = { version = "1", features = ["raw_value"] }
 bytes = "1.6"
 
 [features]
