--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 opentelemetry-otlp = { version = "0.15.0", features = ["http-proto", "reqwest", "reqwest-client", "reqwest-rustls", "trace", "tokio"] }
 opentelemetry = "0.22"
-reqwest = "0.11"
+reqwest = { version = "0.11", features = ["json"] }
 opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "trace"] }
 tracing-opentelemetry = "0.23"
 
@@ -37,7 +37,8 @@ rcgen = "0.12"
 warp = "0.3"
 serde = "1"
 serde_json = { version = "1", features = ["raw_value"] }
-bytes = "1.6"
+bytes = "1"
+hex = "0.4"
 
 [features]
 s3 = ["rust-s3"]
